# Model-Lab

./: Cargo.toml
app/: Cargo.toml
app/src/: core.rs  engine.rs  graphics_context.rs  lib.rs  plan.text  renderer.rs
app/src/core/: app_logic.rs  mod.rs  test_app.rs
app/src/core/test/: app.rs  mod.rs  scene.rs
app/src/engine/: gui_builder.rs  scene.rs
app/src/graphics_context/: buffers.rs  config.rs  error.rs  pass.rs  renderer.rs  shader.rs  vertex.rs
app/src/graphics_context/pass/: hud.rs  simulation_pass.rs
app/src/graphics_context/renderer/: mesh_renderer.rs  particle_renderer.rs  simulation.rs  text.rs  text_renderer.rs
app/src/graphics_context/renderer/simulation/: aos_renderer.rs
app/src/graphics_context/shader/: particle.wgsl
app/src/graphics_context/shader/fragment/: circular.wgsl  passthrough.wgsl
app/src/graphics_context/shader/vertex/: mod.rs  particle_aos_color.wgsl  particle_aos_instanced.wgsl  particle_aos_lit.wgsl  particle_aos_radius_color.wgsl  particle_aos_radius_lit.wgsl  particle_soa_color.wgsl  particle_soa_lit.wgsl  particle_soa_radius_color.wgsl  particle_soa_radius_lit.wgsl  ui.wgsl
app/src/graphics_context/shader/vertex_input/: color_uv.wgsl  lit.wgsl  mod.rs  radius_color.wgsl  radius_lit.wgsl
app/src/graphics_context/shader/vertex_output/: color_uv.wgsl  lit.wgsl  mod.rs  radius_color.wgsl  radius_lit.wgsl
app/src/graphics_context/simulation/: aos.rs  mod.rs  pass.rs  renderer.rs
app/src/renderer/: pass.rs  ui_pass_builder.rs
app/src/renderer/pass/: simulation.rs  text.rs  ui.rs
app/src/renderer/pass/shader/: ui.wgsl
app/src/renderer/pass/text/: glyphon_state.rs  measurer.rs
app/src/simulation/wgpu/: mod.rs  storage.rs
app/src/test/: mod.rs  test_app.rs  test_part.rs  test_scene.rs
app/src/ui/: font.rs  mesh_builder.rs  mod.rs  text.rs
apps/particle/aos_verlet/: Cargo.toml
apps/particle/ball_bounce_aos_verlet/: Cargo.toml
apps/particle/ball_bounce_soa_verlet/: Cargo.toml
apps/particle/soa_verlet/: Cargo.toml
apps/particle/water_fountain_soa_verlet/: Cargo.toml
base/: Cargo.toml
base/src/: lib.rs  math.rs  mesh.rs  model.rs  property.rs  ui.rs  unit.rs
base/src/language/: display_text.rs  mod.rs
base/src/macros/: display_text.rs  mod.rs  property.rs  unit.rs  unit_macros.rs
base/src/mesh/: batch.rs  vertex.rs
base/src/model/: component.rs  registry.rs  test.rs  test_model.rs
base/src/property/: change.rs  config.rs  error.rs  mod.rs  name.rs  node.rs  propertied.rs  (+3 more)
impls/src/: language.rs  lib.rs
libs/app/: Cargo.toml
libs/app/src/: core.rs  engine.rs  graphics_context.rs
libs/app/src/engine/: gui.rs  gui_builder.rs  input.rs  scene.rs
libs/app/src/engine/scene/: ball_bounce_particle_aos_verlet.rs  ball_bounce_particle_soa_verlet.rs  particle_aos_verlet.rs  particle_scene_config.rs
libs/app/src/engine/scene/ball_bounce/: aos_verlet.rs  mod.rs  scene_config.rs  soa_verlet.rs  verlet_aos_stream_lifecycle.rs  verlet_soa_stream_lifecycle.rs
libs/app/src/engine/scene/water_fountain/: mod.rs  scene_config.rs  soa_verlet.rs  verlet_soa_stream_lifecycle.rs
libs/app/src/graphics_context/: buffers.rs  pass.rs  renderer.rs  shader.rs  state.rs  vertex.rs
libs/app/src/graphics_context/pass/: hud.rs
libs/app/src/graphics_context/renderer/: mesh.rs  text.rs
libs/app/src/graphics_context/shader/fragment/: circular.wgsl  mod.rs
libs/app/src/graphics_context/shader/vertex/: particle_aos_color.wgsl  particle_aos_instanced.wgsl
libs/app/src/graphics_context/shader/vertex_input/: color.wgsl  color_uv.wgsl  mod.rs
libs/app/src/graphics_context/shader/vertex_output/: color.wgsl  color_uv.wgsl  mod.rs
libs/app/src/graphics_context/simulation/: aos.rs  mod.rs  pass.rs  renderer.rs  soa.rs
libs/app/src/graphics_context/state/: quad_state.rs  screen_uniforms.rs  uniform_layout.rs
libs/app/src/test/: mod.rs  test_part.rs
libs/app/src/ui/: mod.rs  text_measurer.rs
libs/impls/: Cargo.toml
(+247 files in other folders)
