[workspace]
members = [
    "base",
    "impls", 
    "app",
]
resolver = "2"

[workspace.dependencies]
wgpu = "29.0.1"
tracing = "0.1"
tracing-wasm = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.30"
pollster = "0.3"
glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
glam = { version = "0.29" }
bytemuck = { version = "1", features = ["derive"] }