[package]
name = "app"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "desktop"
path = "src/bin/desktop.rs"


[dependencies]
wgpu = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
glyphon = { workspace = true }
bytemuck = { workspace = true }

base = { path = "../base" }
impls = { path = "../impls" }

[dev-dependencies]
base = { path = "../base", features = ["testing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = { workspace = true }

 