[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { workspace = true }   

wgpu = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
glyphon = { workspace = true }
bytemuck = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = { workspace = true }
 
[dev-dependencies]
base = { workspace = true, features = ["testing"] }

 

 