[package]
name = "ball_bounce_soa_verlet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ball_bounce_soa_verlet"
path = "src/bin/ball_bounce.rs"

[dependencies]
base = { workspace = true }   
app = { workspace = true }  
pollster = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = { workspace = true }